--- a/testweb/test.html
+++ b/testweb/test.html
@@ -1,10 +1,10 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Progate</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
@@ -73,6 +73,4 @@
     </div>
   </body>
 </html>
-=======
-##empty
->>>>>>> 86e3f4567fff99e7c928ce6ca0f022710b7a25a2
+
